02-mini-microservice-blog/blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  #Selector and Template are working together
  #Selector -> match a Label to a pod
  #Template specify config of a Pod
  #Want the Pod to have a label of posts
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: rgazonil/client

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  #By default type is ClusterIP
  #type: ClusterIP This isn't needed
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
