02-mini-microservice-blog/blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  #Selector and Template are working together
  #Selector -> match a Label to a pod
  #Template specify config of a Pod
  #Want the Pod to have a label of posts
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: rgazonil/comments
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  #By default type is ClusterIP
  #type: ClusterIP This isn't needed
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
