02-mini-microservice-blog/blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  #Selector and Template are working together
  #Selector -> match a Label to a pod
  #Template specify config of a Pod
  #Want the Pod to have a label of posts
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: rgazonil/event-bus
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  #By default type is ClusterIP
  #type: ClusterIP This isn't needed
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
