02-mini-microservice-blog/blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  #Selector and Template are working together
  #Selector -> match a Label to a pod
  #Template specify config of a Pod
  #Want the Pod to have a label of posts
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: rgazonil/moderation

---

apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  #By default type is ClusterIP
  #type: ClusterIP This isn't needed
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
