02-mini-microservice-blog/blog/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  #Selector and Template are working together
  #Selector -> match a Label to a pod
  #Template specify config of a Pod
  #Want the Pod to have a label of posts
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: rgazonil/posts
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  #By default type is ClusterIP
  #type: ClusterIP This isn't needed
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
