02-mini-microservice-blog/blog/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      #Exposed port NodePort service
      port: 4000
      #Actual port on server
      targetPort: 4000
